--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,8 +15,13 @@
 </nav>
 
 {{!-- Article Container --}}
-<h1>Note Scraper</h1>
-<div id="articles">
+<div id="wrapper">
+
+  <h1>Note Scraper</h1>
+  <div id="articles"></div>
   <div id="notes"></div>
 
+
+
 </div>
+
